
Release 5.0.7 (Unreleased)
==========================

Bug fixes
---------

- Fix crash in scalar gradient reconstruction with body forces for sequential
  runs (due to incomplete fix in 5.0.6).

- Fix obsolete URL for HDF5 download in automatic installer.

Release 5.0.6 (Jan 29 2018)
===========================

Bug fixes
---------

- Fix missing ghost cell exchange for some scalar gradient reconstructions
  using body forces (iphydr = 1).

- Add --enable-dlopen-rtld-global configure option to fix initialization issues
  of Catalyst or PNG histogram writers as plugin on some systems.

- Fix deadlock in interior faces renumbering with halo_adjacent_faces_last.

- Fix line plot/cs_prope_set writer output for vector variables.

- GUI: ensure runcase and current XML file are consistent before running.

- Fix syncing of order 3 tensor in iterative tensor gradient in case of
  periodicity of rotation.

- Fix crash and errors in MED output with subdivided polyhedral
  or polygonal elements when running in parallel.

- Fixes for data assimilation of module atmo:
  * implicit part of nudging term
  * reader of optimal interpolation file
  * optimal interpolation for sequential runs
  * output settings (log, vis, restart) of analysis field
  * missing loop over dimension in debug and log
  * a debugging switch.

- Fix deadlock in mesh extrusion when some ranks have no boundary faces.

Release 5.0.5 (Dec 20 2017)
===========================

User changes
------------

- GUI: enable "separate meshes" writer option (already available
  through user functions) through the GUI. This option allows for
  separate sub-writers being used for each associated mesh (avoiding
  the frequent need for the "Separate Blocks" operation in ParaView).

Bug fixes
---------

- GUI: fix crash in fluid structure interaction page in builds using PyQt5.

- Fix interlock in Syrthes coupling when combining surface and volume coupling.

- Fix in Rij EBRSM coupled solver (improve robustness).
